--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "dependencies": {
     "ee-first": "^1.1.1",
     "express": "^4.17.0",
+    "moment": "^2.24.0",
     "mysql2": "^1.6.5",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^5.8.6",
+    "sqlite3": "^4.0.8",
     "tedious": "^6.1.1"
   },
   "name": "node",
